[package]
name = "CHAT"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.43"
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version =  "1.49.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
rustyline = { version = "17", features = ["with-file-history"] }
